# QGitTag

./: .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  qgitrelease.pri  qgittag.pri  vcpkg.json
.github/workflows/: main.yml
docs/: QGitAsset.md  QGitRelease.md  QGitTag.md
src/: QGitRelease  QGitTag  qgitasset.cpp  qgitasset.h  qgitrelease.cpp  qgitrelease.h  qgittag.cpp  qgittag.h
